force-app/main/default/objects/QuoteLineItem/fields/GLB_P1_PrecioPesosChilenos__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PrecioPesosChilenos__c</fullName>
    <label>Precio pesos chilenos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>