force-app/main/default/objects/QuoteLineItem/fields/GLB_P1_ValorUF__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_ValorUF__c</fullName>
    <label>Valor UF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>