force-app/main/default/objects/QuoteLineItem/fields/GLBP1_ID_externo_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_ID_externo_cotizacion__c</fullName>
    <label>ID externo cotización</label>
    <length>20</length>
    <type>Text</type>
</CustomField>