force-app/main/default/objects/QuoteLineItem/fields/Precio_pesos_chilenos__c.field-meta.xml
<CustomField>
    <fullName>Precio_pesos_chilenos__c</fullName>
    <label>Precio pesos chilenos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>