force-app/main/default/objects/QuoteLineItem/fields/Valor_UF__c.field-meta.xml
<CustomField>
    <fullName>Valor_UF__c</fullName>
    <label>Valor UF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>