force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__CalculatedPriceJSON__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CalculatedPriceJSON__c</fullName>
    <description>Calculated Price Data JSON</description>
    <label>CalculatedPriceJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>