force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__GroupCensusId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupCensusId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Census</label>
    <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>