force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__GroupClassName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupClassName__c</fullName>
    <formula>vlocity_ins__GroupClassId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Class Name</label>
    <type>Text</type>
</CustomField>