force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__InsurableItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InsurableItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurable Item</label>
    <referenceTo>vlocity_ins__InsurableItem__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>