force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__JurisdictionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__JurisdictionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Jurisdiction for this Quote Line Item.</description>
    <label>Jurisdiction</label>
    <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
    <relationshipLabel>Jurisdiction for this quote line item</relationshipLabel>
    <relationshipName>QuoteLineItemJurisdiction</relationshipName>
    <type>Lookup</type>
</CustomField>