force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__ProductChildItemSequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductChildItemSequence__c</fullName>
    <formula>vlocity_ins__ProductChildItemId__r.vlocity_ins__SeqNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Child Item Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>