force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__ProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductName__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>