force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__ProviderNetworkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Network</label>
    <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>