force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RecordTypeName__c</fullName>
    <formula>Product2.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type Name</label>
    <type>Text</type>
</CustomField>