force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__SourceSystemIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceSystemIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Source System Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>