force-app/main/default/objects/QuoteLineItem/fields/vlocity_ins__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TaxAmount__c</fullName>
    <description>Calculated tax on the QuoteLineItem.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>