force-app/main/default/objects/QuoteLineItem/fields/ZRH_AtributosBMI__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AtributosBMI__c</fullName>
    <label>Atributos BMI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>