force-app/main/default/objects/QuoteLineItem/fields/ZRH_AtributosConvenios__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AtributosConvenios__c</fullName>
    <label>Atributos Convenios</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>