force-app/main/default/objects/QuoteLineItem/fields/ZRH_ClonePlan__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ClonePlan__c</fullName>
    <label>Plan Clonado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>