force-app/main/default/objects/QuoteLineItem/fields/ZRH_CodigoProducto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoProducto__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>