force-app/main/default/objects/QuoteLineItem/fields/ZRH_GrupoDeCobertura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GrupoDeCobertura__c</fullName>
    <formula>TEXT(Product2.ZRH_GrupoDeCobertura__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo de Cobertura</label>
    <type>Text</type>
</CustomField>