force-app/main/default/objects/QuoteLineItem/fields/ZRH_IndicadorAPE__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IndicadorAPE__c</fullName>
    <label>Indicador APE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>