force-app/main/default/objects/QuoteLineItem/fields/ZRH_NumeroDePlanesEnContratantes__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroDePlanesEnContratantes__c</fullName>
    <description>Indica para el plan del holding, cuantos planes en contratantes de este tipo y tarifa existen. Usado para controlar la creación de tarifas.</description>
    <label>Número de Planes en Contratantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>