force-app/main/default/objects/QuoteLineItem/fields/ZRH_TarifaModificada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TarifaModificada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarifa Modificada</label>
    <type>Checkbox</type>
</CustomField>