force-app/main/default/objects/QuoteLineItem/fields/ZRH_TipoTarifa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoTarifa__c</fullName>
    <label>Tipo Tarifa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>