force-app/main/default/objects/QuoteLineItem/fields/ZRH_TipoTarifaPrevia__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoTarifaPrevia__c</fullName>
    <label>Tipo Tarifa Previa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>